missing cpp files
Former-commit-id: e526856629c940e0f485a3ae4ce6605d47b43be0

--- a/file-formats/dmat.html
+++ b/file-formats/dmat.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='../style.css' >
-    <title>IGL_LIB file formats | .dmat</title>
+    <title>libigl file formats | .dmat</title>
   </head>
-  <body>
+  <body class=article_body>
+  <div  class=article>
+    <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
     <h1>.dmat - dense matrices</h1>
     <hr>
     <p>
@@ -34,6 +36,8 @@ Then there should be another header containing the size of the binary part:
 Then coefficents are written in column-major order in Little-endian 4-byte
 double precision IEEE floating point format.
     </p>
+    <p>See also: <a href=.>file formats</a></p>
+  </div>
   </body>
 </html>
 
