--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='../style.css' >
-    <title>IGL_LIB file formats</title>
+    <title>libigl file formats</title>
   </head>
-  <body>
-  <h1>IGL_LIB file formats</h1>
+  <body class=article_body>
+  <div  class=article>
+    <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
+  <h1>libigl file formats</h1>
   <ul>
     <li><a href="./dmat.html">.dmat</a> uncompressed ASCII/binary files for dense matrices</li>
     <li><a href="./bf.html">.bf</a> ASCII files for representing skeletal bone "forests"</li>
@@ -35,5 +37,6 @@
   supports png image files via the <a href=https://github.com/yig/yimg>yimg</a>
   library. Alpha channels and compression are suppported.</li>
   </ul>
+  </div>
   </body>
 </html>
