--- a/style_guidelines.html
+++ b/style_guidelines.html
@@ -185,7 +185,9 @@ and outputs.
       </tr>
     </table>
 
-    <p>See also: <a href=tutorial.html>tutorial</a>, <a href=doc.html>auto-documentation</a></p>
+    <p>See also: <a href=tutorial.html>tutorial</a>, <a
+    href=doc.html>auto-documentation</a>, <a href=file-formats/index.html>file
+    formats</a></p>
   </div>
   </body>
 </html>
