--- a/file-formats/tgf.html
+++ b/file-formats/tgf.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='../style.css' >
-    <title>IGL_LIB file formats | .tgf</title>
+    <title>libigl file formats | .tgf</title>
   </head>
-  <body>
+  <body class=article_body>
+  <div  class=article>
+    <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
     <h1>.tgf - control handle graphs</h1>
     <hr>
     <p>
@@ -27,6 +29,8 @@ The next section concerns the edges of the graph. Each line corresponds to an ed
     <p>
 Bone edges trump pseudo and cage edges. 
     </p>
+    <p>See also: <a href=.>file formats</a></p>
+  </div>
   </body>
 </html>
 
