--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -39,6 +39,50 @@
     <li><a href=http://en.wikipedia.org/wiki/Truevision_TGA>.tga</a> Truevision TGA or TARGA image file format. IGLLIB supports only very basic reading and writing RGB/RGBA files without colormaps and (unverified) run-length compression.</li>
     <li><a href="./tgf.html">.tgf</a> ASCII files for representing control handle graphs</li>
   </ul>
+  <h3>Triangle mesh file format performance</h3>
+  <p>
+  <a
+  href="http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format">.obj</a>
+  and <a href="http://tetgen.berlios.de/fformats.off.html">.off</a> file
+  formats support meshes with arbitrary polygon degrees. However, often we are
+  only working with triangle meshes. Further, .obj files do not have useful
+  headers revealing the number of elements. For triangle meshes, .off and .obj
+  are inferior file formats to the <a
+  href="http://www.ann.jussieu.fr/frey/publications/RT-0253.pdf#page=33">.mesh</a>
+  file format. The current (version 0.1.6) IO functions for these file formats perform as follows for reading and writing a 300,000 triangle mesh:
+  </p>
+  <pre><code>
+writeOBJ:  1.33742 secs
+writeOFF:  0.510111 secs
+writeMESH: 0.218139 secs
+
+readOBJ:   1.3782 secs
+readOFF:   0.691496 secs
+readMESH:  0.242315 secs
+  </code></pre>
+  <p>
+  This reveals that .mesh is 6.5x faster than .obj and about 2.5x faster than .off.
+  </p>
+  <p>
+  While .obj files support normals, it is typically much faster to (re)compute
+  normals from the geometry using <code>per_face_normals</code>,
+  <code>per_vertex_normals</code>, <code>per_corner_normals</code> than to read
+  and write them to files.</p>
+  <p>It gets even better if you're willing to use a nonstandard format. If your
+  triangle mesh is in (<code>V</code>,<code>F</code>) then you can read and
+  write those variables as dense matrices of doubles to 
+  <a href="./dmat.html">.dmat</a> uncompressed <strong>binary</strong> files.
+  This not only ensures perfect precision but also big speed ups. On that same
+  300,000 triangle mesh, .dmat achieves:</p>
+  <pre><code>
+writeDMAT: 0.0384338 secs
+
+readDMAT:  0.0117921 secs
+  </code></pre>
+  <p>This reveals that binary .dmat files are 34x/116x faster at writing and
+  reading than .obj and a hefty 5x/20x over .mesh. In this case it may pay to
+  compute normals once into <code>N</code> and also read and write it to a
+  .dmat file.</p>
   </div>
   </body>
 </html>
