bug fix in readDMAT

--- a/file-formats/dmat.html
+++ b/file-formats/dmat.html
@@ -36,6 +36,7 @@ Then there should be another header containing the size of the binary part:
 Then coefficents are written in column-major order in Little-endian 4-byte
 double precision IEEE floating point format.
     </p>
+    <p><strong>Note:</strong> Line endings must be <code>'\n'</code> aka char(10) aka line feeds.</p>
     <p>See also: <a href=.>file formats</a></p>
   </div>
   </body>
