--- a/matlab-to-eigen.html
+++ b/matlab-to-eigen.html
@@ -196,7 +196,7 @@
 
       <tr class=d1>
         <td><pre><code>B = fliplr(A)<br>B = flipud(A)</code></pre></td>
-        <td><pre><code>B = A.rowwize().reverse().eval()<br>B =
+        <td><pre><code>B = A.rowwise().reverse().eval()<br>B =
 	A.colwise().reverse().eval()</code></pre></td>
         <td>The <code>.eval()</code> is not necessary if A != B</td>
       </tr>
