fixed file formats styles
Former-commit-id: 7bf4d10b21e8cf93c301061cf27ee065ce8db40f

--- a/file-formats/dmat.html
+++ b/file-formats/dmat.html
@@ -4,8 +4,8 @@
     <link rel='stylesheet' type='text/css' href='../style.css' >
     <title>libigl file formats | .dmat</title>
   </head>
-  <body class=article_body>
-  <div  class=article>
+  <body class=article_outer>
+  <div class=article_inner>
     <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
     <h1>.dmat - dense matrices</h1>
     <hr>
