--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -4,8 +4,8 @@
     <link rel='stylesheet' type='text/css' href='../style.css' >
     <title>libigl file formats</title>
   </head>
-  <body class=article_body>
-  <div  class=article>
+  <body class=article_outer>
+  <div  class=article_inner>
     <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
   <h1>libigl file formats</h1>
   <ul>
