--- a/file-formats/tgf.html
+++ b/file-formats/tgf.html
@@ -4,8 +4,8 @@
     <link rel='stylesheet' type='text/css' href='../style.css' >
     <title>libigl file formats | .tgf</title>
   </head>
-  <body class=article_body>
-  <div  class=article>
+  <body class=article_outer>
+  <div class=article_inner>
     <a href=..><img src=../libigl-logo.jpg alt="igl logo" class=center></a>
     <h1>.tgf - control handle graphs</h1>
     <hr>
