--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -38,7 +38,9 @@
     <li><a href=./rbr.html>.rbr</a> ASCII files for saving state of ReAntTweakBar</li>
     <li><a href=http://en.wikipedia.org/wiki/Truevision_TGA>.tga</a> Truevision TGA or TARGA image file format. IGLLIB supports only very basic reading and writing RGB/RGBA files without colormaps and (unverified) run-length compression.</li>
     <li><a href="./tgf.html">.tgf</a> ASCII files for representing control handle graphs</li>
-	<li><a href="./xml.html">.xml</a> XMLSerializer's file format containing the serialization of object data structures.</li>
+    <li><a href="http://en.wikipedia.org/wiki/VRML#WRL_File_Format">.wrl</a>
+    VRML (Virtual Reality Modeling Language) file format for 3D scenes.</li>
+    <li><a href="./xml.html">.xml</a> XMLSerializer's file format containing the serialization of object data structures.</li>
   </ul>
   <h3>Triangle mesh file format performance</h3>
   <p>
