--- a/matlab-to-eigen.html
+++ b/matlab-to-eigen.html
@@ -111,7 +111,7 @@
 
       <tr class=d1>
         <td><pre><code>A(B == 0) = C(B==0)</code></pre></td>
-        <td><pre><code>A = (B == 0).select(C,A)</code></pre></td>
+        <td><pre><code>A = (B.array() == 0).select(C,A)</code></pre></td>
         <td></td>
       </tr>
 
